Adds pi-gpio to switch controller.

--- a/views/switch/index.ejs
+++ b/views/switch/index.ejs
@@ -1,2 +1,3 @@
 <h1>Switches!</h1>
-<a href="/switch/on/16">Turn on pin 16</a>
+<p><a href="/switch/on/16">Turn on pin 16</a></p>
+<p><a href="/switch/off/16">Turn off pin 16</a></p>
